Use new ChargingActivityEngine as replacement for VehicleChargingHandler.java
* Cleanup module code and rename references to constants
* add new expected output, as all events are shifted one second (The engine does not have a delay of one second, which is actually correct)

Signed-off-by: Janek Laudan <laudan@simunto.com>